--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -9,15 +9,15 @@
     
     
     &__content {
-        max-width: 640px;
+        max-width: 500px; //640 px
     
         &__branding {
-            max-width: 320px;
+            max-width: 300px; //320px
             margin: 0 auto 38px;
         }
     
         .title--small {
-            margin-bottom: 64px;
+            margin-bottom: 50px; //64px
         }
     
         .p {
@@ -37,21 +37,9 @@
                 width: calc(50% - 12px) ;
     
                 img {
-                    max-height: 60px;
+                    max-height: 50px;
                 }
-                button{
-                    display: block;
-                    width: 100%;
-                    height: 60px;
-                    font-size: 18px;
-                    color: variaveis.$corTextoSecundario;
-                    background-color: #6421ff;
-                    text-transform: uppercase;
-                    border-radius: 4px;
-                    margin-top: 2vw;
-                    margin-bottom: 8px;
-
-                }
+            
             }
         }
     }
