--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,10 @@
 @use 'hero';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
+@use 'footer';
+
 
 @font-face {
     font-family:Avenir;
@@ -76,4 +80,40 @@ button{
     margin-bottom: 8px;
     cursor: pointer;
 
+}
+.image-text-section{
+    padding: 5.6644vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    img{
+        max-width: 100%;
+    }
+    &__text__container{
+        padding: 0 2vw;
+
+        h2{
+            margin-bottom: 24px;
+        }
+    }
+    &--image-full-width{
+        display: block;
+        position: relative;
+
+        img{
+            width: 100%;
+        }
+
+        &__text__container{
+            position: absolute;
+            top:0;
+            left: 50%;
+            height: 100%;
+            width: calc(50% - 5.6vw) ;//5.6vw
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+    }
 }
